feat: add basic page layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>CV Ruslan Rakhimov</title>
+  </head>
+  <body>
+   <h1 class="cv-title">CV</h1>
+  </body>
+</html>
